# felica-emu

./: .gitignore  LICENSE  SPEC.md  flake.nix  pyproject.toml
hooks/: .gitignore  example_hooks.py
nfc_emu/: __init__.py  base.py  dump_card.py  emulate_card.py  inspect_dump.py  probe_card.py  utils.py
nfc_emu/felica/: card.py  const.py  emulator.py  protocol.py  scanner.py
tests/: test_cyclic_service.py  test_felica_protocol.py  test_hook_error.py
